--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,8 +10,7 @@ source:
   sha256: eb3d531916d6fea399520a2a4663099ddbf2278088599fa09980631067dc9d7b
 
 build:
-  number: 0
-  skip: true  # [win or osx]
+  number: 1
   run_exports:
     - {{ pin_subpackage(name, max_pin='x.x' ) }}
 
@@ -36,6 +35,10 @@ test:
     - test -f ${PREFIX}/bin/zck  # [unix]
     - test -f ${PREFIX}/include/zck.h  # [unix]
     - test -f ${PREFIX}/lib/pkgconfig/zck.pc  # [unix]
+    - if not exist %PREFIX%\\Library\\bin\\zck.dll exit 1  # [win]
+    - if not exist %PREFIX%\\Library\\lib\\zck.lib exit 1  # [win]
+    - if not exist %PREFIX%\\Library\\bin\\zck.exe exit 1  # [win]
+    - if not exist %PREFIX%\\Library\\include\\zck.h exit 1  # [win]
 
 about:
   home: https://github.com/zchunk/zchunk
@@ -56,3 +59,4 @@ extra:
     - wolfv
     - JohanMabille
     - SylvainCorlay
+    - davidbrochart
