--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,6 +11,7 @@ source:
   patches:
     - osx_include_endian.h.patch  # [osx]
     - osx_link_argp.patch  # [osx]
+    - win_link.patch  # [win]
 
 build:
   number: 1
@@ -24,14 +25,18 @@ requirements:
     - pkg-config  # [osx or win]
     - ninja
   host:
-    - libcurl
+    - libcurl  # [not win]
+    - zstd  # [not win]
+    - libcurl-static  # [win]
+    - zstd-static  # [win]
     - openssl
-    - zstd
     - argp-standalone  # [osx]
   run:
-    - libcurl
+    - libcurl  # [not win]
+    - zstd  # [not win]
+    - libcurl-static  # [win]
+    - zstd-static  # [win]
     - openssl
-    - zstd
 
 test:
   commands:
