pkg-config for everyone

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,7 +19,7 @@ requirements:
   build:
     - {{ compiler('c') }}
     - meson
-    - pkg-config  # [osx]
+    - pkg-config
     - ninja
   host:
     - libcurl
