--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,6 @@ source:
 
 build:
   number: 0
-  skip: true  # [win]
   run_exports:
     - {{ pin_subpackage(name, max_pin='x.x' ) }}
 
@@ -25,7 +24,7 @@ requirements:
     - libcurl
     - zstd
     - openssl
-    - argp-standalone  # [osx]
+    - argp-standalone  # [osx or win]
   run:
     - libcurl
     - zstd
