MNT: Re-rendered with conda-build 3.21.8, conda-smithy 3.19.0, and conda-forge-pinning 2022.05.04.18.03.34

--- a/.ci_support/win_64_openssl3.yaml
+++ b/.ci_support/win_64_openssl3.yaml
@@ -1,23 +1,17 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '11.0'
 c_compiler:
-- clang
-c_compiler_version:
-- '13'
+- vs2017
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 libcurl:
 - '7'
-macos_machine:
-- arm64-apple-darwin20.0.0
 openssl:
 - '3'
 pin_run_as_build:
   libcurl:
     max_pin: x
 target_platform:
-- osx-arm64
+- win-64
 zstd:
 - '1.5'
