--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,6 +10,7 @@ source:
   sha256: bc36f13b1bcb2ab52d046bfc3ec04a9bd1f89b070b4e8fca52eded235a583526
   patches:
     - zstd_arg.patch
+    - static_write_data.patch
 
 build:
   number: 1
